# 08-OMR-Signature-Volatility

./: .gitignore  README.md  git.MD  pyproject.toml
code/: __init__.py
code/exact/: brownian_motion.py
code/notebooks/: First draft signature models.ipynb  path_signatures_introduction.ipynb
dev/: __init__.py  run_tests_with_coverage.py
output/: __init__.py  aapl_model_metrics.txt
scripts/: __init__.py  aapl_compare_models.py  calibrate_sde_example.py  signature_approximation_quality.py  train_signature_model.py  validate_from_sde.py  validate_path_calibration.py
signature_vol/: __init__.py
signature_vol/calibration/: signature_sde_calibration.py
signature_vol/exact/: __init__.py  batch_signature.py  brownian_motion.py  linear_operator.py  signature.py
tests/: __init__.py  test_batch_signature.py  test_brownian_motion.py  test_integration.py  test_linear_operator.py  test_signature.py  test_signature_sde_calibration.py
