[project]
name = "signature-vol"
version = "0.1.0"
description = "Signature volatility research project"
requires-python = ">=3.9,<3.10"
dependencies = [
    "iisignature",
    "numpy>=1.7,<2",
    "pandas",
    "pandas_datareader",
    "scikit-learn",
    "matplotlib",
    "typing-extensions",
    "icecream",
    "yfinance",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "ipykernel",
    "jupyterlab",
    "ruff==0.12.8",
    "pytest-cov",
    "pytest-sugar",
    "ipywidgets",
]

[tool.coverage.run]
source = ["signature_vol"]
omit = ["signature_vol/examples/*"]

[tool.coverage.report]
show_missing = true