[project]
name = "signature-vol"
version = "0.1.0"
description = "Signature volatility"
requires-python = ">=3.9,<3.10"
authors = [
    {name = "Arthur Valk", email = "arthur.h.p.valk@gmail.com"},
    {name = "Marta", email = "idk"},
]

dependencies = [
    "iisignature==0.24",
    "numpy==1.26.4",
    "scikit-learn==1.6.1",
    "matplotlib==3.9.4",
    "typing-extensions==4.15.0",
    "yfinance==0.2.66",
    "marimo==0.17.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest==8.4.2",
    "ruff==0.12.8",
    "pytest-cov==7.0.0",
    "pytest-sugar==1.1.1",
    "icecream==2.1.8",
]

[tool.coverage.run]
source = ["signature_vol"]

[tool.coverage.report]
show_missing = true